--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -2,6 +2,7 @@
 
 	<Import Project="$(SolutionDir)Version.props" />
 	<Import Project="targets\PluginContext.targets" />
+	<Import Project="targets\Publish1.targets" />
 	<!--<Import Project="targets\Plugin.targets" />-->
 	<Import Project="targets\CustomPlugin.targets" />
 	<Import Project="targets\Custom.targets" />
