--- a/src/Admin/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
+++ b/src/Admin/ThingsGateway.Admin.Application/ThingsGateway.Admin.Application.csproj
@@ -21,15 +21,19 @@
 		<PackageReference Include="BootstrapBlazor.MiniExcel" Version="1.38.0" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
 		<PackageReference Include="Rougamo.Fody" Version="5.0.0" />
-		<PackageReference Include="MailKit" Version="4.9.0" />
+		<PackageReference Include="MailKit" Version="4.10.0" />
 		<PackageReference Include="SqlSugarCore" Version="5.1.4.175" />
 	</ItemGroup>
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.*" />
+		<PackageReference Include="System.Formats.Asn1" Version="8.*" />
+		<PackageReference Include="System.Threading.RateLimiting" Version="8.*" />
+
 	</ItemGroup>
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.*" />
-
+		<PackageReference Include="System.Formats.Asn1" Version="9.*" />
+		<PackageReference Include="System.Threading.RateLimiting" Version="9.*" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Remove="SeedData\Admin\*.json" />
