--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -17,12 +17,10 @@
 	<!--nuget包解压复制文件，上下文动态加载，网关管理和网关冗余-->
 	<Import Project="targets\GatewayOther.targets" Condition=" '$(SolutionName)' == 'ThingsGatewayRelease' " />
 
-	<!--直接引用-->
-	<!--<Import Project="targets\PluginDebug.targets" />-->
-
 	<!--nuget包解压复制文件，上下文动态加载-->
-	<!--<Import Project="targets\PluginContext.targets" />-->
-	<Import Project="targets\PluginContext.targets" Condition=" '$(SolutionName)' != 'ThingsGatewayPro' " />
+	<Import Project="targets\PluginContext.targets" Condition=" '$(SolutionName)' != 'ThingsGatewayPro' AND '$(Configuration)' != 'Debug' " />
+	<!--直接引用-->
+	<Import Project="targets\PluginDebug.targets" Condition=" '$(SolutionName)' != 'ThingsGatewayPro' AND '$(Configuration)' == 'Debug' " />
 
 	<!--nuget包解压复制文件，插件域隔离动态加载-->
 	<!--<Import Project="targets\Plugin.targets" />-->
